public/css/main.css
/* ... */
.experience__company {
    font-size: 14px;
    font-weight: 700;
    color: #ff7a00
}

.clients {
    display: -webkit-box;
    display: flex;
    flex-wrap: wrap;
    -webkit-box-pack: start;
    justify-content: flex-start;
    -webkit-box-align: center;
    align-items: center;
    margin-bottom: -30px;
    margin-left: -20px
}

@media (min-width:768px) {
    .clients {
        margin-left: -50px
    }
}

@media (min-width:1200px) {
    .clients {
        -webkit-box-pack: justify;
        justify-content: space-between
    }
}

.clients__item {
    opacity: .5;
    margin-bottom: 30px;
    margin-left: 20px;
    -webkit-transition-property: opacity;
    transition-property: opacity;
    -webkit-transition-timing-function: cubic-bezier(.645, .045, .355, 1);
    transition-timing-function: cubic-bezier(.645, .045, .355, 1);
    -webkit-transition-duration: .2s;
    transition-duration: .2s
}

.clients__item:hover {
    opacity: 1
}

.testimonial .icon-quote {
    display: block;
    margin-bottom: 16px
}

@media (min-width:768px) {
    .clients__item {
        margin-left: 50px
    }

    .testimonial .icon-quote {
        margin-bottom: 24px
    }

    .img-clip-left-backward {
        /* -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 14% 100%);
        clip-path: polygon(0 0, 100% 0, 100% 100%, 14% 100%) */
    }
}

.testimonial__author {
    display: -webkit-box;
    display: flex;
    -webkit-box-pack: start;
    justify-content: flex-start;
    -webkit-box-align: center;
    align-items: center
}

.testimonial__author-info,
html body {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal
}

.testimonial__author-image {
    margin-right: 16px;
    width: 52px;
    height: 52px;
    border-radius: 100%
}

.testimonial__author-info {
    display: flex;
    flex-direction: column;
    -webkit-box-pack: center;
    justify-content: center;
    -webkit-box-align: start;
    align-items: flex-start
}

.testimonial__author-info h4 {
    font-size: 16px;
    margin-bottom: 0
}

.testimonial__author-info span {
    font-size: 14px;
    font-weight: 700;
    color: #e93e34
}

html {
    height: 100%;
    overflow-x: hidden
}

html body {
    display: flex;
    flex-direction: column;
    overflow: hidden;
    color: #000;
    letter-spacing: -.2px;
    font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'
}

html body ::-moz-selection {
    background-color: #e93e34;
    color: #fff
}

html body ::selection {
    background-color: #e93e34;
    color: #fff
}

input[type=text]:focus,
input[type=email]:focus,
input[type=password]:focus,
textarea:focus {
    outline: 0
}

.section {
    position: relative;
    padding-top: 60px;
    padding-bottom: 60px
}

.section--border-bottom::after {
    content: '';
    position: absolute;
    left: 50%;
    bottom: 0;
    width: 100%;
    height: 1px;
    max-width: 1170px;
    background-color: #dbe0e4;
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%)
}

.section .row.row--padded {
    margin-top: 32px;
    margin-bottom: 60px
}

@media (min-width:1200px) {
    .section div[class*=col-].rad-col-text:first-child {
        max-width: 500px;
        margin-right: auto
    }

    .section div[class*=col-].rad-col-text:not(:first-child) {
        max-width: 500px;
        margin-left: auto
    }
}

.section div[class*=col-].rad-col-text h2 {
    text-align: center
}

@media (min-width:992px) {
    .section {
        padding-top: 80px;
        padding-bottom: 80px
    }

    .section .row.row--padded {
        margin-top: 80px;
        margin-bottom: 80px
    }

    .section div[class*=col-].rad-col-text h2 {
        text-align: left
    }
}

.section div[class*=col-].rad-col-text p {
    text-align: center
}

.section div[class*=col-] img {
    max-width: 100%
}

.section div[class*=col-] img.image-left-overflow {
    margin-left: 0
}

@media (min-width:768px) {
    .img-clip-left-forward {
        -webkit-clip-path: polygon(14% 0, 100% 0, 100% 100%, 0 100%);
        clip-path: polygon(14% 0, 100% 0, 100% 100%, 0 100%)
    }

    .img-clip-right-backward {
        -webkit-clip-path: polygon(0 0, 86% 0, 100% 100%, 0 100%);
        clip-path: polygon(0 0, 86% 0, 100% 100%, 0 100%)
    }

    .img-clip-right-forward {
        -webkit-clip-path: polygon(0 0, 100% 0, 86% 100%, 0 100%);
        clip-path: polygon(0 0, 100% 0, 86% 100%, 0 100%)
    }

    .section div[class*=col-] img.image-left-overflow {
        margin-left: -50px
    }

    .section div[class*=col-] img.image-right-overflow {
        margin-right: -150px
    }
}

.section--cta {
    padding-top: 80px;
    padding-bottom: 80px;
    background-color: #000;
    color: #fff
}

.section--cta .h2,
.section--cta h2 {
    color: #fff
}

.section--contact {
    padding-bottom: 0;
    background-image: url(../img/contact-bg.png);
    background-repeat: repeat-x;
    background-position: 0 100%
}

.section--contact .container {
    background-color: #fff;
    box-shadow: 0 42px 34px -16px rgba(0, 0, 0, .3)
}

.section li {
    display: block;
    position: relative;
    padding-left: 15px;
    font-size: 16px;
    font-weight: 300;
    color: rgba(0, 0, 0, .6);
    line-height: 1.24;
    margin-bottom: 12px;
    text-align: left
}

.section li::before {
    content: '';
    display: block;
    position: absolute;
    left: 0;
    top: 10px;
    width: 4px;
    height: 4px;
    border-radius: 2px;
    background-color: #000
}

.header.collapse.show::before,
.header.collapsing::before {
    background-color: #fff;
    opacity: 1
}

.header+.section {
    margin-top: 120px
}

.section.four-o-four {
    -webkit-box-flex: 1;
    flex: 1
}
/* ... */

